--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "17.0.2",
     "react-native": "0.66.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-maps": "0.29.3",
     "react-native-permissions": "^3.0.5",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
